8210407: Refactor java.util.Calendar:i18n shell tests to plain java tests
Reviewed-by: naoto